    write operations if the server is a MongoDB 3.6 replica set or sharded
    cluster.
  * Support for MongoDB OP_MSG wire protocol. New command monitoring functions
    expose OP_MSG document sequences for event listeners:
      mongoc_apm_command_started_get_document_sequences
      mongoc_apm_command_succeeded_get_document_sequences

Additional new features not specific to MongoDB 3.6:

  * Support for mongodb+srv URIs to query DNS for SRV and TXT records that
    configure the connection to MongoDB.
  * Support LibreSSL with CMake build

Bug fixes:

  * mongoc_bulk_operation_execute did not always initialize "reply".
  * Fix C99 pedantic warnings.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Kevin Albertson
  * Jeremy Mikola
  * Derick Rethans
  * Graham Whitted
  * Brian Moss
  * Alex Masterov

Peace,

    A. Jesse Jiryu Davis


mongo-c-driver 1.8.2
====================

It is my pleasure to announce mongo-c-driver 1.8.2. This release fixes the
following bugs:

  * Remove option to bundle the Snappy compression library, it caused issues
    for programs linking to libmongoc
  * Fix pkg-config and CMake config file flags for programs that statically
    link to libmongoc when libmongoc is statically linked to zLib
  * The configure flag "--with-zlib=no" was ignored
    Crash in authentication when username is NULL

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Derick Rethans
  * Hannes Magnusson
  * Jeremy Mikola

Peace,

    A. Jesse Jiryu Davis


mongo-c-driver 1.8.1
====================

It is my pleasure to announce mongo-c-driver 1.8.1. This release fixes the
following bugs:

  * Remove a syntax error in the configure script that affects some shells.
  * The configure script respects --with-zlib=system and --with-snappy=system.
  * The internal mongoc_server_description_t struct is properly reinitialized