@@ -54,7 +54,7 @@ mongoc_client_pool_max_size (mongoc_client_pool_t *pool,
                              uint32_t max_pool_size);
 MONGOC_EXPORT (void)
 mongoc_client_pool_min_size (mongoc_client_pool_t *pool,
-                             uint32_t min_pool_size);
+                             uint32_t min_pool_size) BSON_GNUC_DEPRECATED;
 #ifdef MONGOC_ENABLE_SSL
 MONGOC_EXPORT (void)
 mongoc_client_pool_set_ssl_opts (mongoc_client_pool_t *pool,
